assets/css/style.css
/* google fonts */
@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Montserrat:100,200,300,400,500,600,700');

html, body {
    height: 100%;
}

html {
  scroll-behavior: smooth;
  background-color: #eff5f5;
}
/* Navbar */

.navbar-brand {
    font-family: "Montserrat", sans-serif;
    font-weight: bold;
}

.nav-item {
    font-family: "Roboto", sans-serif;
    color: black;
}

.navbar-toggler-icon {
    color: #fff;
}

/* Title Image */
/* The following code is based on a W3 tutorial - link in README */
.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-image-tax.jpg);
  height: 50%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}
.hero-text {
  font-family: "Roboto", sans-serif;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  text-transform: uppercase;
  font-size: larger;
}

/* Service flipcards*/
/* The template for this code was taken from W3 school - ammended to remove image and change colors*/
.flip-card {
  background-color: transparent;
  width: 400px;
  height: 250px;
  perspective: 1000px; 
  display: block;
  margin-top: 5px;
  text-align: center;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; 
  backface-visibility: hidden;
   border-radius: 25px;
}

.flip-card-front {
  background-color: #697D84;
  color: #fff;
  text-transform: uppercase;
  font-family: "Roboto", sans-serif;
  padding: 70px 0px 70px 0px;
}

.flip-card-back {
  background-color: #B3C1C3;
  color: #000;
  transform: rotateY(180deg);
  font-family: "Montserrat", sans-serif;
}

.flip-card-back ul li {
    padding: 5px;
    list-style: none;
    text-align: center;
}

.services-flip-cards {
    width: 100%;
}

#services {
    background-color: #eff5f5;
    padding: 50px;
}

/* Important Dates*/
.dates-header {
    font-family: "Roboto", sans-serif;
    color: #fff;
    font-weight: 300;
    text-align: center; 
    padding-top: 5px;
    text-transform: uppercase;
}

.important-dates {
    background-color: #697D84;
}
#dates-carousel {
    background-color: #697D84;
    color: #fff;
    padding-top: 10px;
    padding-bottom: 10px;
    max-height: 100%;
    max-width: 100%;
    margin-bottom: 5px;  
}

/* Meet our team */ 
.team-header {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    text-align: center;
    text-transform: uppercase;
    color: #000;
    max-width: 100%;
}

#team {
    font-family: "Roboto", sans-serif;
    margin: 0px;
    padding: 25px;
    background-color: #eff5f5;  
}

.team-member {
    background-color: #B3C1C3;
    margin: 0px;
    width: 100%;
    background-clip: padding-box;
    border: 10px solid transparent;
    border-radius: 25px;
}

.team-photo {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    filter: grayscale(100%);
    margin-top: 7px;
}

h5 {
    margin: 10px;
}

.map {
    width: 100%;
    height: 400px;
}

/* Contact form*/
/* The template for this code was taken from Code Institute's Full Stack Developer Course's Mini Project Contact Form video */
.contact-header {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    margin-top: 20px;
    margin-bottom: 15px;
}

.contact-sub-header {
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    margin-bottom: 10px;
}

.center-form {
    padding-top: 10px;
    margin: 0 auto;
    max-width: 70%;
}

button[type="submit"] {
    margin-top: 15px;
    margin-bottom: 20px;
    color: #fff;
    background-color: #1A2E38;
}

/* Testimonials carousel*/

.testimonials {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    margin-top: 20px;
    margin-bottom: 15px;
}

.client-testimonial {
  background-color: #B3C1C3;
  border-radius: 5px;
  padding: 16px;
  margin: 16px 0;
}

.client-testimonial::after {
  content: "";
  clear: both;
  display: table;
}

.client-testimonial img {
  float: left;
  margin-right: 20px;
  border-radius: 50%;
}
@media (max-width: 768px) {
  .client-testimonial {
    text-align: center;
  }

  .client-testimonial img {
    margin: auto;
    float: none;
    display: block;
  }
}

/* Template for modifiying carousel controls was taken from Stack Overflow*/
.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 40px;
  width: 40px;
  outline: black;
  background-size: 100%, 100%;
  background-image: none;
}

.carousel-control-next-icon:after
{
  content: '>';
  font-size: 25px;
  color: black;
}

.carousel-control-prev-icon:after {
  content: '<';
  font-size: 25px;
  color: black;
}

/* Footer*/
footer {
    color: #fff;
    min-height: 120px;
    margin: 0;
    padding: 20px;
}

.contact-details li {
    font-family: "Roboto", sans-serif;
    list-style: none;
    color: #000000;
}

.social-links {
    text-align: center;
}

@media only screen and (min-width: 768px) {
    .social-links {
        text-align: right;
    }
}
.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 17px;
    line-height: 7px;
    color: #fff;
    background: #1A2E38;
    text-align: center;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background:  #697D84;
}

.footer-details {
    padding: 40px;
}

/* Back to top link*/
.back-to-top {
    text-transform: uppercase;
}

.back-up {
    font-family: "Roboto", sans-serif;
    color: #000;
    text-decoration: none;
}
.back-up:hover {
    color: #93A2A6;
    text-decoration: none;   
}

